--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
-site_name: 
-site_description: 
-site_url: 
+site_name: 北辞
+site_description: 北辞的博客
+site_url: http://blog.northword.cn
 
 theme:
     name: 'material'
@@ -10,7 +10,7 @@ theme:
     font:
         text: Karla
         code: Ubuntu Mono
-    language: en
+    language: zh
     palette:
 
     # Light mode
@@ -35,7 +35,9 @@ theme:
         - navigation.top
         - navigation.tabs
         - navigation.tabs.sticky
-        - navigation.expand
+        - navigation.sections
+        - navigation.instant
+        # - navigation.expand
 # Extensions
 markdown_extensions:
   - footnotes
@@ -95,5 +97,6 @@ extra_css:
     - assets/css/custom_attributes.css
     - assets/css/tooltipster.bundle.min.css
     - https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css
-extra:
-  generator: false
+# extra:
+  # generator: false
+copyright: Copyright &copy; 2016 - 2020 Northword
