--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,15 +2,43 @@ name: ci
 on:
   push:
     branches:
-      - master
       - main
+    paths:
+      - 'docs/**'
+
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
         with:
-          python-version: 3.x
-      - run: pip install -r requirements.txt
-      - run: mkdocs gh-deploy --force
+          fetch-depth: 0
+      - uses: actions/setup-python@v3
+        with:
+          python-version: 3.10.2
+      - name: get changed files
+        uses: tj-actions/changed-files@v21
+        with:
+          since_last_remote_commit: true
+      - name: obs2mk source files
+        run: |
+          pip install obs2mk
+          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
+            if [[ "$file" == *md ]] 
+              then
+                obs2mk --minimal file "$file"
+              fi
+            done
+      - name: Mkdocs build
+        run: |
+          pip install -r requirements.txt
+          mkdocs gh-deploy --force --clean
+      - name: Push updateds files
+        run: |
+          git pull
+          git config --global user.name 'github-actions'
+          git config --global user.email 'github-actions@users.noreply.github.com'
+          git add . 
+          fileList=$(git status --porcelain | tr -d '\n' | tr -d 'M' |tr -d '??')
+          git commit -m "🏓 Publishing from ObsidianMD" -m "${fileList}"
+          git push
