--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
     paths:
-      - 'docs/**'
+      - 'src/**'
 
 jobs:
   build:
@@ -26,7 +26,7 @@ jobs:
           for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
             if [[ "$file" == *md ]] 
               then
-                obs2mk --minimal file "$file"
+                obs2mk --northword file "$file"
               fi
             done
       - name: Mkdocs build
