--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -85,6 +85,7 @@ plugins:
   - awesome-pages
   - tooltipster-links
   - embed_file
+  - git-revision-date
 extra_javascript:
   - assets/js/mathjax.js
   - assets/js/utils.js
