--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,18 +35,18 @@ jobs:
       #     mkdocs gh-deploy --force --clean
       - name: Push updateds files
         run: |
-          # git pull
-          # git config --global user.name 'github-actions'
-          # git config --global user.email 'github-actions@users.noreply.github.com'
-          # rm -rf ./site/
-          # git add . 
-          # fileList=$(git status --porcelain | tr -d '\n' | tr -d 'M' |tr -d '??')
-          # git commit -m "🏓 Publishing from ObsidianMD" -m "${fileList}"
-          # git push
-          git branch mkdocs
-          git stash
-          git checkout mkdocs
-          git stash pop
-          git add .
-          git commit -m "converted by obs2mk"
-          git push origin mkdocs
+          git pull
+          git config --global user.name 'github-actions'
+          git config --global user.email 'github-actions@users.noreply.github.com'
+          rm -rf ./site/
+          git add . 
+          fileList=$(git status --porcelain | tr -d '\n' | tr -d 'M' |tr -d '??')
+          git commit -m "🏓 Publishing from ObsidianMD" -m "${fileList}"
+          git push
+          # git branch mkdocs
+          # git stash
+          # git checkout mkdocs
+          # git stash pop
+          # git add .
+          # git commit -m "converted by obs2mk"
+          # git push origin mkdocs
