--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,15 +22,12 @@ jobs:
         with:
           since_last_remote_commit: true
       - name: obs2mk source files
-        if: steps.changed-files.outputs.files_changed == 'true'
         run: |
           pip install obs2mk
           echo "111111"
           echo "${{ steps.changed-files.outputs.all_changed_files }}"
           echo "2222"
-          echo "${{ steps.changed-files.outputs.changed_files }}
-          echo "2222"
-          for file in ${{ steps.changed-files.outputs.changed_files }}; do
+          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
             if [[ "$file" == *md ]] 
               then
                 echo "$file"
@@ -42,6 +39,7 @@ jobs:
       #     pip install -r requirements.txt
       #     mkdocs gh-deploy --force --clean
       - name: Push updateds files
+        if: steps.changed-files.outputs.any_changed == 'true'
         run: |
           git pull
           git config --global user.name 'github-actions'
