--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,14 +24,10 @@ jobs:
       - name: obs2mk source files
         run: |
           pip install obs2mk
-          echo "111111"
-          echo "${{ steps.changed-files.outputs.all_changed_files }}"
-          echo "2222"
-          echo "${{steps.changed-files.outputs.any_changed}}"
+          echo "${{steps.changed-files.outputs.any_changed}}111"
           for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
             if [[ "$file" == *md ]] 
               then
-                echo "$file"
                 obs2mk --minimal file "$file"
               fi
             done
