--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,41 +1,44 @@
 site_name: 北辞
 site_description: 北辞的博客
-site_url: http://blog.northword.cn
+site_url: https://blog.northword.cn
+# repo_name: Northword
+# repo_url: https://github.com/northword/northword.github.io
 
 theme:
     name: 'material'
-    logo: assets/logo/favicons.png
     favicon: assets/logo/favicons.png
+    logo: assets/logo/favicons.png
+    icon:
+      repo: fontawesome/brands/github
     custom_dir: overrides
     font:
         text: Karla
         code: Ubuntu Mono
     language: zh
     palette:
-
     # Light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default
-      primary: teal
-      accent: light blue
-      toggle:
-        icon: material/toggle-switch-off-outline
-        name: Switch to dark mode
-
-    # Dark mode
-    - media: "(prefers-color-scheme: dark)"
-      scheme: slate
-      primary: blue
+      primary: indigo
       accent: indigo
       toggle:
         icon: material/toggle-switch
+        name: Switch to dark mode
+    # Dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      primary: indigo
+      accent: indigo
+      toggle:
+        icon: material/toggle-switch-off-outline
         name: Switch to light mode
+    
     features:
         - navigation.indexes
         - navigation.top
         - navigation.tabs
         - navigation.tabs.sticky
-        - navigation.sections
+        # - navigation.sections
         - navigation.instant
         # - navigation.expand
 # Extensions
@@ -48,6 +51,10 @@ markdown_extensions:
   - smarty
   - tables
   - mdx_breakless_lists
+  - admonition
+  - toc:
+      permalink: true
+      slugify: !!python/name:pymdownx.slugs.uslugify # 解决中文标题解析问题
   - pymdownx.arithmatex:
       generic: true
   - pymdownx.details
@@ -60,14 +67,12 @@ markdown_extensions:
   - pymdownx.highlight:
       use_pygments: true
       anchor_linenums: true
+      linenums: true
+      linenums_style: pymdownx-inline
   - pymdownx.tasklist:
        custom_checkbox: true
   - pymdownx.emoji:
       emoji_generator: !!python/name:pymdownx.emoji.to_svg
-  - admonition
-  - toc:
-      permalink: true
-  - pymdownx.inlinehilite
   - pymdownx.snippets
   - pymdownx.superfences:
       custom_fences:
@@ -79,25 +84,36 @@ markdown_extensions:
           format: !!python/name:mermaid2.fence_mermaid
 plugins:
   - search
-  - ezlinks:
+  - ezlinks: # https://github.com/orbikm/mkdocs-ezlinks-plugin
         wikilinks: true
   - mermaid2
-  - awesome-pages
-  - tooltipster-links
-  - embed_file
-  - git-revision-date
+  - awesome-pages:
+      collapse_single_pages: true
+  # - tooltipster-links
+  - embed_file # A way to embed a file present in your docs, see https://github.com/Mara-Li/mkdocs_embed_file_plugins
+  # - git-revision-date-localized:
+  #     type: datetime
+  #     # enable_creation_date: true
+  #     locale: zh
+  - callouts # Convert Obsidian callouts to mkdocs admonitions, see https://github.com/sondregronas/mkdocs-callouts
 extra_javascript:
-  - assets/js/mathjax.js
+  # - assets/js/mathjax.js
   - assets/js/utils.js
-  - https://polyfill.io/v3/polyfill.min.js?features=es6
-  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
-  - assets/js/tooltipster.bundle.js  
+  # - https://polyfill.io/v3/polyfill.min.js?features=es6
+  # - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+  # - assets/js/tooltipster.bundle.js  
 extra_css:
-    - assets/css/img-grids-floats.css
+    # - assets/css/img-grids-floats.css
     - assets/css/utils.css
-    - assets/css/custom_attributes.css
-    - assets/css/tooltipster.bundle.min.css
-    - https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css
-# extra:
-  # generator: false
-copyright: Copyright &copy; 2016 - 2020 Northword
+    # - assets/css/custom_attributes.css
+    # - assets/css/tooltipster.bundle.min.css
+    # - https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css
+extra:
+    social:
+    - icon: fontawesome/solid/paper-plane
+      link: mailto:northword@outlook.com
+    - icon: fontawesome/brands/github
+      link: https://github.com/northword
+copyright: Copyright &copy; 2016 - 2022 Northword
+
+
