--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: 北辞
 site_description: 北辞的博客
-site_url: https://blog.northword.cn
+site_url: https://blog.northword.cn/obsidian_valut
 # repo_name: Northword
 # repo_url: https://github.com/northword/northword.github.io
 
