--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -92,9 +92,10 @@ plugins:
   # - tooltipster-links
   - embed_file # A way to embed a file present in your docs, see https://github.com/Mara-Li/mkdocs_embed_file_plugins
   - git-revision-date-localized:
-      type: datetime
+      type: iso_datetime
       # enable_creation_date: true
       locale: zh
+      timezone: Asia/Shanghai
   - callouts # Convert Obsidian callouts to mkdocs admonitions, see https://github.com/sondregronas/mkdocs-callouts
 extra_javascript:
   # - assets/js/mathjax.js
